# SkyBox

./: .gitignore  .gitmodules  .prettierignore  AGENTS.md  CHANGELOG.md  ProjectPlan.md  README.md  fix_migration_ttl.patch  package-lock.json  package.json  skybox_login_patch.diff  tailwind.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  questions.md  report-abuse.md  support.md
.github/workflows/: PR.yml  build-windows.yml  cross-platform.yml  readme.yml  release.yml  rust.yml  version.yml
.qoder/rules/: DontBuidl.md
1.0.27/: Info.plist  SkyBox.d  icon.icns
docs/: API_REFERENCE.md  grammers.md
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/telegram/: health.rs  login.rs  messages.rs  mod.rs  photo.rs  session.rs  sync.rs  utils.rs
src-tauri/src/utils/: logger.rs
src/components/skybox/: Breadcrumbs.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CountryCodeSelect.tsx  DetailsPanel.tsx  ExplorerSidebar.tsx  FileGrid.tsx  FileRow.tsx  OtpInput.tsx  QrCard.tsx  SavedMediaViewer.tsx  SearchBar.tsx  SidebarMenu.tsx  StandaloneTransferListPopover.tsx  TelegramButton.tsx  TelegramInput.tsx  TextInputDialog.tsx  TransferListPopover.tsx  saved-media-viewer.css
src/components/teleexplorer/: Breadcrumbs.tsx  ConfirmDialog.tsx  CountryCodeSelect.tsx  (+7 more)
src/lib/: logger.ts  thumbnail-src.ts
src/pages/: ExplorerPage.tsx  LoadingPage.tsx  LoginPage.tsx  QrDemoPage.tsx  SettingsPage.tsx
(+1 files in other folders)
