[package]
name = "SkyBox"
version = "1.0.19"
description = "A Telegram-themed desktop file explorer with cloud integration"
authors = ["pamod-madubashana"]
license = ""
repository = "https://github.com/TG-SkyBox/SkyBox"
homepage = "https://github.com/TG-SkyBox/SkyBox"
documentation = "https://github.com/TG-SkyBox/SkyBox/blob/main/README.md"
publisher = "SkyBox Team"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
directories = "5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
sqlite = { version = "0.37.0", features = ["bundled"] }
grammers-client = "0.8.0"
grammers-mtproto = "0.8.0"
grammers-session = "0.8.0"
grammers-mtsender = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
bincode = "1.3"
base64 = { version = "0.21", features = ["std"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
lazy_static = "1.4"
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }